@@ -163,7 +163,7 @@ AliasesToExport = 'Add-FontsToNavContainer', 'Backup-NavContainerDatabases',
                'Import-TestToolkitToNavContainer', 'Install-NavContainerApp', 
                'Install-NAVSipCryptoProviderFromNavContainer', 
                'Invoke-NavContainerApi', 'Invoke-ScriptInNavContainer', 
-               'New-BCImage', 'New-CompanyInNavContainer', 'New-NavContainer', 
+               'New-BcImage', 'New-CompanyInNavContainer', 'New-NavContainer', 
                'New-NavContainerNavUser', 'New-NavContainerTenant', 
                'New-NavContainerWindowsUser', 'New-NavContainerWizard', 
                'Open-NavContainer', 'Publish-NavContainerApp', 
